# Google-AI-Gallery

./: implementation_plan.md  page-sizes.md
Android/src/: VOICE_MODE.md  gradle.properties  settings.gradle.kts
Android/src/app/: build.gradle.kts
Android/src/app/src/main/: AndroidManifest.xml
Android/src/app/src/main/cpp/: CMakeLists.txt  audio_buffer.cpp  audio_buffer.h  jni_bridge.cpp  kokoro_engine.cpp  kokoro_engine.h
Android/src/app/src/main/java/com/google/ai/edge/gallery/: GalleryApplication.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/di/: AppModule.kt  CoroutineDispatchers.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/tts/: AudioTrackPlayer.kt  KokoroTtsEngine.kt  TextChunkSentinel.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/common/chat/: ChatPanel.kt  MessageInputText.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/common/textandvoiceinput/: VadStateIndicator.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/ui/llmchat/: LlmChatViewModel.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/voice/: SileroVadWrapper.kt  VoiceEvent.kt  VoiceModeController.kt  VoiceModeMuteSignal.kt
Android/src/app/src/main/res/xml/: file_paths.xml
Android/src/gradle/: libs.versions.toml
Android/src/gradle/wrapper/: gradle-wrapper.properties
